--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@capgo/inappbrowser",
+  "name": "@easy-connect/inappbrowser",
   "version": "6.9.32",
   "description": "Capacitor plugin in app browser",
   "main": "dist/plugin.cjs.js",
@@ -17,10 +17,10 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Cap-go/capacitor-inappbrowser.git"
+    "url": "git+https://github.com/Ticket-Gretchen/capacitor-inappbrowser.git"
   },
   "bugs": {
-    "url": "https://github.com/Cap-go/capacitor-inappbrowser/issues"
+    "url": "https://github.com/Ticket-Gretchen/capacitor-inappbrowser/issues"
   },
   "keywords": [
     "capacitor",
